more translations (also eventoptions)

--- a/Translations/German/text-bonus-change.xml
+++ b/Translations/German/text-bonus-change.xml
@@ -516,7 +516,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRAIT_DIVINE_MANDATE_OPTION_1</zType>
-		<Translation>I listened to my advisors</Translation>
+		<Translation>Ich habe auf meine Berater gehört</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRAIT_OF_THE_PEOPLE_OPTION_0</zType>
@@ -540,11 +540,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRAIT_DUEL_OF_FATES_VICTORIOUS_OPTION_0</zType>
-		<Translation>Victorious in single combat</Translation>
+		<Translation>Siegreich im Einzelkampf</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRAIT_DUEL_OF_FATES_DEFEATED_OPTION_0</zType>
-		<Translation>Defeated in single combat</Translation>
+		<Translation>Besiegt im Einzelkampf</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRAIT_FAMILY_RETREAT_OPTION_0</zType>
@@ -552,35 +552,35 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FAMILY_TARNISHED_OPTION_1_FAMILY</zType>
-		<Translation>Released prisoner to please a Family</Translation>
+		<Translation>Gefangenen freigelassen um Familie zufriedenzustellen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_PRETTY_PERSUASION_OPTION_2_CHARACTER_2</zType>
-		<Translation>Accepted multiple bribes</Translation>
+		<Translation>Nahm mehrere Bestechungen an</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_UNLIKELY_ALLIES_OPTION_0_CHARACTER_3</zType>
-		<Translation>Gave in to foreign pressure</Translation>
+		<Translation>Dem ausländischen Druck nachgegeben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_ZIGGURAT_CRUMBLES_OPTION_RESTORE_PLAYER</zType>
-		<Translation>Saved The Great Ziggurat</Translation>
+		<Translation>Das Zikkurat des Mondgottes Nanna gesichert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_ZIGGURAT_CRUMBLES_OPTION_IMPROVE_PLAYER</zType>
-		<Translation>Improved The Great Ziggurat</Translation>
+		<Translation>Das Zikkurat des Mondgottes Nanna verbessert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_ZIGGURAT_CRUMBLES_OPTION_STUDY_PLAYER</zType>
-		<Translation>Restored and Studied The Great Ziggurat</Translation>
+		<Translation>Das Zikkurat des Mondgottes Nanna restauriert und studiert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_ZIGGURAT_CRUMBLES_OPTION_SHRINE_PLAYER</zType>
-		<Translation>Improved The Great Ziggurat</Translation>
+		<Translation>Das Zikkurat des Mondgottes Nanna verbessert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RUINS_GIANT_STATUE_CARVE</zType>
-		<Translation>Remade statue in my image</Translation>
+		<Translation>Statue in meinem Abbild erneuert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RUINS_CURSED_LAND_ROCKS</zType>
@@ -640,11 +640,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_EPICS_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_SLAVERY_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_SLAVERY_OPTION_FREEDOM</zType>
@@ -652,27 +652,27 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_FREEDOM_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_CENTRALIZATION_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_CONSTITUTION_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_FOUR_CITIES_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_5_KILLS_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_SIX_URBAN_IMPROVEMENTS_OPTION_NO</zType>
-		<Translation>Followed my own path</Translation>
+		<Translation>Meinen eigenen Weg gewählt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RIVER_CROSSING_1</zType>
@@ -680,11 +680,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THOSE_BEFORE_3</zType>
-		<Translation>I refused to change my laws</Translation>
+		<Translation>Ich weigerte mich meine Gesetze zu ändern</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TRIBE_CONTACT_GRINNING_EMISSARY_WAR</zType>
-		<Translation>I refused peace in exchange for a gift</Translation>
+		<Translation>Ich verweigerte Frieden im Ausstausch für ein Geschenk</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_MONSTERS_DEEP_FOLLOWUP</zType>
@@ -712,7 +712,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_HUMBLE_REFUSE_OPTION_0_PLAYER_1</zType>
-		<Translation>Showed enemy spies no mercy</Translation>
+		<Translation>Zeigte feindlichen Spionen keine Gnade</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_HUMBLE_PERSIA_EXCHANGE_OPTION_1_PLAYER_1</zType>
@@ -720,23 +720,23 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_FRIENDLY_EGYPT_REFUSED_DONATION_OPTION_1_PLAYER_1</zType>
-		<Translation>Stood up to Egypt</Translation>
+		<Translation>Ägypten die Stirn geboten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_FRIENDLY_LAVISH_GREECE_OPTION_0_PLAYER_1</zType>
-		<Translation>Extravagant gifts to Greece</Translation>
+		<Translation>Aufwendige Geschenke an Griechenland</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_FRIENDLY_LAVISH_MORE_OPTION_0_PLAYER_1</zType>
-		<Translation>Exchanged extravagant gifts for Peace</Translation>
+		<Translation>Aufwendige Geschenke für Frieden getauscht</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_PRIDEFUL_ROME_OPTION_1_PLAYER_1</zType>
-		<Translation>Bowed to the will of Rome</Translation>
+		<Translation>Dem Willen Roms gebeugt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_PRIDEFUL_ROME_OPTION_0_PLAYER_1</zType>
-		<Translation>Stood up to Rome</Translation>
+		<Translation>Rom die Stirn geboten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_CAPTURED_ROMAN_CITY_OPTION_1_PLAYER_1</zType>
@@ -744,19 +744,19 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_CAPTURED_ROMAN_CITY_OPTION_0_PLAYER_1</zType>
-		<Translation>Captured a Roman City then agreed to accept Peace</Translation>
+		<Translation>Eine römische Stadt erobert, danach Frieden akzeptiert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_ROMANS_HAVE_TAKEN_OUR_CITY_OPTION_1_PLAYER_1</zType>
-		<Translation>Refused to bow to Rome even after they captured our city</Translation>
+		<Translation>Geweigert sich Rom zu beugen, selbst nach dem Sie eine unserer Stadt erobert haben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_ROMANS_HAVE_TAKEN_OUR_CITY_OPTION_0_PLAYER_1</zType>
-		<Translation>Bowed to Rome after they captured our city</Translation>
+		<Translation>Sich Rom gebeugt, nach dem Sie eine unserer Stadt erobert haben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_PRIDEFUL_PERSIA_OPTION_1_PLAYER_1</zType>
-		<Translation>Stood up to Persia</Translation>
+		<Translation>Persien die Stirn geboten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_NEIGHBORS_PRIDEFUL_PERSIA_RESPECT_OPTION_2_PLAYER_1</zType>
@@ -1004,23 +1004,23 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_PLAYER_WAR_DECLARE_PLAY_TO_WIN</zType>
-		<Translation>I asked for this, apparently</Translation>
+		<Translation>Ich habe es so gewollt, allem Anschein nach</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_PLAYER_PEACE_END_OPINION_PLAYER_1</zType>
-		<Translation>Begged for link(DIPLOMACY_PEACE)</Translation>
+		<Translation>Nach link(DIPLOMACY_PEACE) gebettelt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_DINNER_WITH_A_RIVAL_OPTION_1_CHARACTER_2</zType>
-		<Translation>Boosted our General</Translation>
+		<Translation>Unseren Feldherren angetrieben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_TOKEN_OF_GOODWILL_OPTION_0_PLAYER_1</zType>
-		<Translation>Refused to give tech to foreign nation</Translation>
+		<Translation>Geweigert Technologie an ein fremdes Reich zu geben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FACE_IN_GOLD_OPTION_0_PLAYER_1</zType>
-		<Translation>Coins only have my face</Translation>
+		<Translation>Münzen haben nur mein Gesicht</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_CARAVAN_OF_LOVE_OPTION_1_CHARACTER_2</zType>
@@ -1096,7 +1096,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SUCCESSION_THEM_TRIBUTE</zType>
-		<Translation>Refused to pay tribute</Translation>
+		<Translation>Geweigert Tribut zu zahlen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SUCCESSION_THEM_SNUBBED_1</zType>
@@ -1108,7 +1108,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SUCESSION_THEM_DEPOSED_0</zType>
-		<Translation>Refused to treat with a new ruler</Translation>
+		<Translation>Geweigert mit neuem Herrscher zu verhandeln</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_MOST_BLESSED_PEOPLE_ON_EARTH_OPTION_0_CHARACTER</zType>
@@ -1747,7 +1747,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_MONKEYS_PAW_OPTION_1_CHARACTER_1</zType>
-		<Translation>Ignored childish stories</Translation>
+		<Translation>Kindische Geschichten ignoriert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_CUTS_BOTH_WAYS_OPTION_0_CHARACTER_0</zType>
@@ -1899,15 +1899,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOREST_FIRE_TOMB_OPTION_1_PLAYER</zType>
-		<Translation>Preserved an ancient tomb</Translation>
+		<Translation>Ein antikes Grab erhalten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOREST_FIRE_TOMB_OPTION_0_PLAYER</zType>
-		<Translation>Looted an ancient tomb</Translation>
+		<Translation>Ein antikes Grab geplündert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOREST_FIRE_MONUMENT_OPTION_2_PLAYER</zType>
-		<Translation>Refused to honor an ancient tomb</Translation>
+		<Translation>Geweigert ein antikes Grab zu ehren</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOREST_FIRE_MONUMENT_OPTION_1_PLAYER</zType>
@@ -1955,11 +1955,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SUPPORTING_THE_FAITH_OPTION_REFUSE</zType>
-		<Translation>Refused to support faith</Translation>
+		<Translation>Geweigert Glauben zu unterstützen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOUNDING_FAITH_THEM_YES</zType>
-		<Translation>Supported a foreign faith</Translation>
+		<Translation>Einen fremden Glauben unterstüzt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_BLESSINGS_OF_OUR_ANCESTORS_OPTION_1_PLAYER</zType>
@@ -1971,11 +1971,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SHRINE_REFUSE</zType>
-		<Translation>Refused to bow to the pagans</Translation>
+		<Translation>Geweiger sich den Heiden zu beugen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_DEDICATION_2</zType>
-		<Translation>Forging my own path</Translation>
+		<Translation>Meinen eigenen Weg schmieden</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FIRE_OF_FIRES_YES</zType>
@@ -2099,11 +2099,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_GENEROUS_OFFER_REFUSE</zType>
-		<Translation>Turned down a donation</Translation>
+		<Translation>Eine Spende abgelehnt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RELIGIOUS_ABDICATION</zType>
-		<Translation>Refused to abdicate</Translation>
+		<Translation>Geweigert abzudanken</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_FOUNDING_AVESTAN_1</zType>
@@ -2155,11 +2155,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_MYSTERIOUS_SWORD_USING_DISPLAY_LEADER</zType>
-		<Translation>Displaying the Sword</Translation>
+		<Translation>Stellt das Schwert aus</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_MYSTERIOUS_SWORD_BREAK_ACCEPT</zType>
-		<Translation>Sword Break</Translation>
+		<Translation>Schwert ist gebrochen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_ASCETIC_MOVEMENT_ALLOW</zType>
@@ -2303,7 +2303,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_THE_BIG_PICTURE_OPTION_1_CHARACTER_0</zType>
-		<Translation>Defended law</Translation>
+		<Translation>Gesetz verteidigt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SUPPLY_CHAIN_WOES_OPTION_0_CHARACTER_0</zType>
@@ -2331,11 +2331,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_LAST_KISS_OPTION_0_CHARACTER_2</zType>
-		<Translation>Accuse family of murder</Translation>
+		<Translation>Familie des Mordes bezichtigt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_WOOD_SHORTAGES_OPTION_0_PLAYER_0</zType>
-		<Translation>Needed foreign aid</Translation>
+		<Translation>Braucht ausländische Hilfe</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SLANDER_NO_MORE_SECRETS_OPTION_0_PLAYER_0</zType>
@@ -2363,7 +2363,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_SPECIAL_STATUS_OPTION_2_CHARACTER_1</zType>
-		<Translation>Fought to end corruption</Translation>
+		<Translation>Kämpfte um Korruption ein Ende zu setzen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_IN_REMEMBRANCE_OPTION_1_CHARACTER_2</zType>
