--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -14,7 +14,7 @@
 	<!--Name-->
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_BASE</zType>
-		<Translation>Grundlage</Translation>
+		<Translation>Grundwert</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_AMBITION</zType>
